# Debian-usb-bridge

./: .gitattributes  .gitignore  CHANGELOG.md  MarkInfo_SearchTitle_Config_100.json  README.md  VERSION  VERSION_NOTES.md  config.example.yaml  pyproject.toml  summa.docx
docs/: RK3568_GATEWAY_TECHNICAL_REPORT_20260604.md  v0.900_ai_porting_guide.md  v0.900_technical_report.md
profiles/: body_composition.yaml  bodypass.yaml
rk3588_gateway/: MarkInfo_SearchTitle_Config_100.json  README.md  VERSION  VERSION_NOTES.md  config.example.yaml  install_debian.sh  pyproject.toml  requirements.txt
rk3588_gateway/scripts/: capture_printer_once.py  configure_gpio_buttons.py  fb_status.py  find_input_devices.sh  icon_template_match.cc  image_crop_resize.cc  list_gpio_lines.sh  ppocr_rknn_server.py  ppocr_rknn_worker.cc  setup_usb_composite_gadget.sh  setup_usb_hid_gadget.sh  setup_usb_printer_gadget.sh  test_ch9350_key.py  test_ch9350_mouse.py  window_yolo_rknn.cc  window_yolo_worker.cc
rk3588_gateway/src/rk3588_gateway/: __init__.py  api.py  compat.py  config.py  display.py  gpio.py  hid.py  hid_output.py  main.py  msc_monitor.py  patient_api.py  print_capture.py  printer.py  report_pdf.py  report_upload.py  report_uploader.py  uploader.py  vision_flow.py  vm_transfer.py  workflow.py
rk3588_gateway/systemd/: rk3568-fb-status.service  rk3568-usb-gadget.service  rk3588-display-kiosk.service  rk3588-fb-status.service
rk3588_gateway/tests/: test_vision_flow.py  test_workflow_vision.py
scripts/: capture_printer_once.py  fb_status.py  open_login_probe.py  ppocr_rknn_server.py  (+3 more)
(+23 files in other folders)
