[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rk3588-gateway"
version = "0.1.0"
description = "Headless RK3588 Debian gateway for HID, barcode, printing and API relay"
requires-python = ">=3.10"
dependencies = [
  "aiohttp==3.9.5",
  "evdev==1.7.1",
  "PyYAML==6.0.2",
  "Pillow==10.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
